--- a/healthcare_patient_costs.ipynb
+++ b/healthcare_patient_costs.ipynb
@@ -757,7 +757,7 @@
       "source": [
         "Given the metrics above, we can see our model is performing relatively well. Our estimates for expenses tend to be off on average by about $1,500.\n",
         "\n",
-        "This is good considering that we're dealing with a mean cost of about $13,000, which is good considering that we're dealing with minimums of ~1,000 and maximums of ~64,000.\n",
+        "This is good considering that we're dealing with a mean cost of about $13,000, minimums of ~1,000, and maximums of ~64,000.\n",
         "\n",
         "We can also see in the below scatterplot a visual of how our regressor performs. Our predicted values fit well with the true values.\n",
         "\n",
