--- a/healthcare_patient_costs.ipynb
+++ b/healthcare_patient_costs.ipynb
@@ -14,7 +14,7 @@
         "\n",
         "This project has been created with production in mind, hence the many functions before the main body of the code at the bottom.\n",
         "\n",
-        "The goal of this model is to help our healthcare company accurately predict patient cost. This is based on a real project that was worked on during my tenure at Anthem Blue Cross Blue Shield, with a real sample of the data anonymized and stripped of any personally identifiable information.\n",
+        "The goal of this model is to help our healthcare company accurately predict cost per patient. This is based on a real project that was worked on during my tenure at Anthem Blue Cross Blue Shield, with a real sample of the data anonymized and stripped of any personally identifiable information.\n",
         "\n"
       ],
       "metadata": {
